# buildtools

./: Makefile  Platform.conf  README.md  Rules.mak  platform.conf  rules.mak  settings_source.mk  settings_thirdparty.mk  settings_toolchain.mk  shellutil.mk  source.mak  source.mk  thirdparty.mak  thirdparty.mk  toolchain.mk
config/: BUILD.gn  BUILDCONFIG.gn  target.gni
config/platform/android/: .gitignore
cutest/: Makefile  build.sh
cutest/rule/: cutest.mak
gn/: .gitignore
lmxml/: Makefile  build.sh
lmxml/rule/: lmxml.mak
lrbuf/: BUILD.gn  Makefile  SOURCE
lrbuf/demo/: main.c
lrbuf/inc/: lrbuf.h
lrbuf/rule/: demo.mak  lrbuf.mak  test.mak
lrbuf/src/: lrbuf.c
lrbuf/test/: test.c
toolchain/: gcc_like_toolchain.gni  msvc_toolchain.gni  sysroot.gni
toolchain/clang/: BUILD.gn
toolchain/gcc/: BUILD.gn
toolchain/msvc/: BUILD.gn
