# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("demo") {
  include_dirs = [ 
    "inc",
  ]

  sources = [
    "demo/main.c",
  ]

  deps = [
    ":lib",
  ]
}

static_library("lib") {
  include_dirs = [ 
    "inc",
  ]

  sources = [
    "src/lrbuf.c",
    "inc/lrbuf.h",
  ]
}
