
import("//gn/toolchain/gcc_like_toolchain.gni")

gcc_like_toolchain("gcc_host") {
  cpu = host_cpu
  os = host_os
  ar = host_ar
  cc = host_cc
  cxx = host_cxx
}

gcc_like_toolchain("gcc_target") {
  # cpu = current_cpu
  # os = current_os
  cpu = target_cpu
  os = target_os
  ar = target_ar
  cc = target_cc
  cxx = target_cxx
}
